# GYRO-HACKATHON

./: .gitignore  Cargo.toml  GYRO_Technical_Architecture_Response.txt  README.md  WITHDRAW_IMPLEMENTATION.md  capacitor.config.ts  next.config.js  next.config.ts  next.config.web.ts  package-lock.json  package.json  package_new.json  temp_usdc_keys.json  test-deposit.js  test-deposit.ts  test-history.ts  test-withdraw.ts  tsconfig.json
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
backend/contracts/gyro/: Cargo.toml
ios/App/: Podfile
scripts/: addTrustlineUSDC.mjs  build-mobile.js  checkAdminNetwork.ts  checkAdminStatus.ts  checkAfterFaucet.ts  checkIssuerAccount.ts  checkMainnetAccount.ts  configure-admin.js  createAdminAccount.ts  createUSDCAsset.ts  diagnoseAccount.ts  establishTrustline.ts  findUSDCIssuer.ts  generateNewAdmin.ts  investigateAccount.ts  restore-api.js  setup-admin.js  setupAdminUSDC.ts  setupUSDCAsset.ts  setupUSDCWithoutIssuer.ts  testDeposit.ts  testDepositCorrect.ts  validateIssuer.ts  validateKeys.ts
src/app/: globals.css  layout.tsx  page.tsx
src/hooks/: README.md  useContractBalance.ts  useDeposit.ts  useDepositSmart.ts  useExchangeRate.ts  useRegisterUser.ts  useStellarAuth.ts  useTransactionHistory.ts  useTransfer.ts  useUserRegistration.ts  useWithdraw.ts
src/lib/: adminConfig.ts  contractConfig.ts  depositService.ts  depositServiceSmart.ts  keys.ts  stellar.ts  withdrawServiceSmart.ts
src/types/: jsx.d.ts
src/utils/: balanceManager.ts  secretKeyManager.ts  secureStorage.ts
(+55 files in other folders)
