[workspace]
resolver = "2"
members = [
    "backend/contracts/gyro",
]

[workspace.dependencies]
soroban-sdk = "22.0.8"
blend-contract-sdk = { git = "https://github.com/blend-capital/blend-contract-sdk", branch = "main" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
